--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -223,7 +223,7 @@
         </div>
 
         <!-- Danger Zone -->
-@* WIP         <div class="col-12 mt-4">
+         <div class="col-12 mt-4">
             <button class="btn btn-link btn-sm text-muted text-decoration-none p-0" type="button" data-bs-toggle="collapse" data-bs-target="#dangerZone" aria-expanded="false" aria-controls="dangerZone">
                 <i class="fas fa-chevron-right"></i> Advanced Options
             </button>
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-        </div> *@
+        </div>
     </div>
 </form>
 
