Enables filtering of competitors by fleet
Allows filtering of competitors by fleet on the index page.
Adds the ability to include inactive competitors in exports.
Exposes includeInactive parameter for competitor retrieval.
Adds a fleet filter dropdown to the competitor index view.

--- a/SailScores.Web/Views/Competitor/ExportHtml.cshtml
+++ b/SailScores.Web/Views/Competitor/ExportHtml.cshtml
@@ -43,9 +43,12 @@
                     <tbody>
                         @foreach(var boatGroup in Model)
                         {
-                            <tr>
-                                <th colspan="6" class="text-center">@boatGroup.Key</th>
-                            </tr>
+                            @if (Model.Count > 1)
+                            {
+                                <tr>
+                                    <th colspan="6" class="text-center">@boatGroup.Key</th>
+                                </tr>
+                            }
 
                             @foreach (var comp in boatGroup.Value)
                             {
