--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -16,41 +16,42 @@
 </div>
 
 <div class="row mb-md-4">
-    <div class="col-md-4 d-none d-md-block">
-        <div id="carouselScreenshots" class="carousel slide carousel-fade" data-bs-ride="carousel" style="max-height: 500px;">
-            <div class="carousel-inner" style="overflow: hidden;">
-                <div class="carousel-item active">
-                    <picture>
-                        <source media="(prefers-color-scheme: dark)" srcset="/images/TypiqueSeries-dark.webp">
-                        <img src="/images/TypiqueSeries-light.webp"
-                              srcset="/images/TypiqueSeries-light.webp 1x, /images/TypiqueSeries-light-small.webp 0.5x"
-                              alt="Typical Series results"
-                              loading="lazy" class="img-fluid" width="1016" height="2056" style="height: 500px; object-fit: cover; object-position: top;">
-                    </picture>
-                </div>
-                <div class="carousel-item">
-                    <picture>
-                        <source media="(prefers-color-scheme: dark)" srcset="/images/TypiqueRaceEntry-dark.webp">
-                        <img src="/images/TypiqueRaceEntry-light.webp"
-                              srcset="/images/TypiqueRaceEntry-light.webp 1x, /images/TypiqueRaceEntry-light-small.webp 0.5x"
-                              alt="Results entry"
-                              loading="lazy" class="img-fluid" width="1016" height="2056" style="height: 500px; object-fit: cover; object-position: top;">
-                    </picture>
-                </div>
-                <div class="carousel-item">
-                    <picture>
-                        <source media="(prefers-color-scheme: dark)" srcset="/images/TypiqueMainPage-dark.webp">
-                        <img src="/images/TypiqueMainPage-light.webp"
-                              srcset="/images/TypiqueMainPage-light.webp 1x, /images/TypiqueMainPage-light-small.webp 0.5x"
-                              alt="Sample club main page"
-                              loading="lazy" class="img-fluid" width="1016" height="2056" style="height: 500px; object-fit: cover; object-position: top;">
-                    </picture>
-                </div>
+<div class="col-md-4 d-none d-md-block">
+    <div id="carouselScreenshots" class="carousel slide carousel-fade" data-bs-ride="carousel" style="max-height: 500px;">
+        <div class="carousel-inner" style="overflow: hidden; position: relative;">
+            <div class="carousel-item active">
+                <picture>
+                    <source media="(prefers-color-scheme: dark)" srcset="/images/TypiqueSeries-dark.webp">
+                    <img src="/images/TypiqueSeries-light.webp"
+                          srcset="/images/TypiqueSeries-light.webp 1x, /images/TypiqueSeries-light-small.webp 0.5x"
+                          alt="Typical Series results"
+                          loading="lazy" class="img-fluid" width="1016" height="2056" style="height: 500px; object-fit: cover; object-position: top;">
+                </picture>
             </div>
+            <div class="carousel-item">
+                <picture>
+                    <source media="(prefers-color-scheme: dark)" srcset="/images/TypiqueRaceEntry-dark.webp">
+                    <img src="/images/TypiqueRaceEntry-light.webp"
+                          srcset="/images/TypiqueRaceEntry-light.webp 1x, /images/TypiqueRaceEntry-light-small.webp 0.5x"
+                          alt="Results entry"
+                          loading="lazy" class="img-fluid" width="1016" height="2056" style="height: 500px; object-fit: cover; object-position: top;">
+                </picture>
+            </div>
+            <div class="carousel-item">
+                <picture>
+                    <source media="(prefers-color-scheme: dark)" srcset="/images/TypiqueMainPage-dark.webp">
+                    <img src="/images/TypiqueMainPage-light.webp"
+                          srcset="/images/TypiqueMainPage-light.webp 1x, /images/TypiqueMainPage-light-small.webp 0.5x"
+                          alt="Sample club main page"
+                          loading="lazy" class="img-fluid" width="1016" height="2056" style="height: 500px; object-fit: cover; object-position: top;">
+                </picture>
+            </div>
+            <div style="position: absolute; bottom: 0; left: 0; right: 0; height: 30px; background: linear-gradient(to bottom, transparent, var(--bs-body-bg)); pointer-events: none; z-index: 10;"></div>
         </div>
-
-
     </div>
+
+
+</div>
     <div class="col-md-8 col-lg-6">
         <h4>What's important in sailing club scoring software?</h4>
         <ul>
