More prominent log in on Home pages

--- a/SailScores.Web/Views/Account/Register.cshtml
+++ b/SailScores.Web/Views/Account/Register.cshtml
@@ -10,8 +10,8 @@
         <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
             <h4>Create a new account:</h4>
             <p class="lead">
-                <strong>Note</strong> SailScores accounts will only enable
-                features for users set up as scorekeepers.
+                <strong>Note</strong> SailScores accounts only enable
+                features for club scorekeepers.
             </p>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
