--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -91,6 +91,16 @@
                         <li class="nav-item"><a asp-area="" asp-controller="Supporter" asp-action="Index" class="nav-link@(isPricing ? " active" : "")">Pricing</a></li>
                         <li class="nav-item"><a asp-area="" asp-controller="ClubRequest" asp-action="Index" class="nav-link@(isTryItOut ? " active" : "")">Try it out</a></li>
                     </ul>
+                    <ul class="navbar-nav ms-auto">
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item"><a href="/Identity/Account/Manage/UpdateProfile" class="nav-link">My Account</a></li>
+                        }
+                        else
+                        {
+                            <li class="nav-item"><a asp-area="" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@SettingsService.GetPreferredUri(HttpContextAccessor.HttpContext.Request)" class="nav-link">Log in</a></li>
+                        }
+                    </ul>
                 </div>
             </nav>
         </div>
