--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -115,7 +115,7 @@
                 {
                     <li style="text-wrap: pretty;">
                         <a href="~/@ViewData["ClubInitials"]/@series.Season.UrlName/@series.UrlName">
-                            @series.Season.Name @series.Name
+                            @(series.Name.Contains(series.Season.Name, StringComparison.OrdinalIgnoreCase) ? series.Name : $"{series.Season.Name} {series.Name}")
                         </a>
                         @if (series.UpdatedDate.HasValue && series.UpdatedDate > DateTime.Now.AddDays(-15))
                         {
