--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -259,7 +259,10 @@
                                 <div class="row">
                                     <label asp-for="StartTime" class="control-label col-3 col-md-4 col-form-label text-end">Start Time</label>
                                     <div class="col-9 col-md-8">
-                                        <input asp-for="StartTime" class="form-control" type="time" step="1" />
+                                        <div class="input-group">
+                                            <input asp-for="StartTime" class="form-control" type="time" step="1" />
+                                            <button type="button" class="btn btn-outline-secondary" id="startNowButton" style="display:none;">Start Now</button>
+                                        </div>
                                         <span asp-validation-for="StartTime" class="text-danger"></span>
                                     </div>
                                 </div>
