--- a/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
+++ b/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="d-flex flex-row gap-1">
                 <div class="finish-time-div" display="none">
-                    <input name="FinishTime" class="form-control form-control-sm finish-time-input" type="time" step="1" />
+                    <input name="FinishTime" class="form-control form-control-sm finish-time-input time-picker" type="text" placeholder="HH:mm:ss" />
                     <span class="text-danger finish-time-error"></span>
                 </div>
                 <div class="elapsed-time-div" display="none">
