--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -93,7 +93,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
-
+    <link rel="stylesheet" href="~/vendor/flatpickr/flatpickr.min.css" />
 
     <environment include="Development">
         <link rel="stylesheet" href="~/css/custom.css" />
@@ -248,6 +248,7 @@
 </environment>
 
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="~/vendor/flatpickr/flatpickr.min.js"></script>
 <script type="text/javascript">
         /* First CSS File */
         var deferredStyleOne = document.createElement('link');
