--- a/SailScores.Web/Views/SiteAdmin/Index.cshtml
+++ b/SailScores.Web/Views/SiteAdmin/Index.cshtml
@@ -23,6 +23,9 @@
                 <i class="fas fa-sync"></i> Reset Club Initials Cache
             </button>
         </form>
+        <a asp-controller="ClubRequest" asp-action="List" class="btn btn-info">
+            <i class="fas fa-list"></i> Club Requests
+        </a>
     </div>
 </div>
 
